--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   <!-- Welcome Section -->
                   <section class="mb-4">
                      <div class="section-header">
-                        <h1>Welcome to the Competition!</h1>
+                        <h1>Welcome to Z1 Winterfest 2024!</h1>
                      </div>
                      <img src="banner.jpg" alt="Banner Image" class="img-fluid mb-3">
                      <ul class="bullet-points">
