--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                      <div class="section-header">
                         <h1>Welcome to Z1 Winterfest 2024!</h1>
                      </div>
-                     <img src="banner.jpg" alt="Banner Image" class="img-fluid mb-3">
+                     <img src="banner.png" alt="Banner Image" class="img-fluid mb-3">
                      <ul class="bullet-points">
                         <li>Participation fee is <strong>Rs.600/- per flat.</strong></li>
                         <li>Fill a <strong>separate form for each participant</strong> from your flat.</li>
@@ -78,7 +78,7 @@
                      <div class="section-header">
                         <h2>Event Schedule</h2>
                      </div>
-                     <img src="schedule.jpg" alt="Event Schedule" class="img-fluid">
+                     <img src="schedule.png" alt="Event Schedule" class="img-fluid">
                   </section>
                   <div class="divider"></div>
                   <!-- Participant Information Section -->
@@ -295,7 +295,7 @@
                         <p>Use below QR code or below UPI ID
                            <strong>vyapar.171174085726@hdfcbank</strong>
                         </p>
-                        <img src="qrcode.jpg" alt="QRcode" class="img-fluid">
+                        <img src="qrcode.png" alt="QRcode" class="img-fluid">
                      </div>
                   </section>
                   <!-- Payment confirmation Section -->
