--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                   <!-- Welcome Section -->
                   <section class="mb-4">
                      <div class="section-header">
-                        <h1>Welcome to Z1 Winterfest 2024!</h1>
+                        <h1>Z1 Winterfest 2024</h1>
                      </div>
-                     <img src="banner.png" alt="Banner Image" class="banner-image">
+                     <img src="banner.png" alt="Banner Image" class="img-fluid">
                      <ul class="bullet-points">
                         <li>Participation fee is <strong>Rs.600/- per flat.</strong></li>
                         <li>Fill a <strong>separate form for each participant</strong> from your flat.</li>
@@ -110,7 +110,7 @@
                      <div class="section-header">
                         <h2>Event Schedule</h2>
                      </div>
-                     <img src="schedule.png" alt="Event Schedule" class="schedule-image">
+                     <img src="schedule.png" alt="Event Schedule" class="img-fluid">
                   </section>
                   <div class="divider"></div>
                   <!-- Participant Information Section -->
