--- a/index.html
+++ b/index.html
@@ -38,38 +38,6 @@
          width: 1em;
          margin-left: -1em;
          }
-         .banner-image, .schedule-image {
-             width: auto;
-         }
-         /* Desktops */
-         @media (min-width: 992px) {
-             .banner-image {
-                 height: 200px;
-             }
-             .schedule-image {
-                 height: 150px;
-             }
-         }
-         
-         /* Tablets */
-         @media (max-width: 991px) {
-             .banner-image {
-                 height: 180px;
-             }
-             .schedule-image {
-                 height: 130px;
-             }
-         }
-         
-         /* Mobile Phones */
-         @media (max-width: 767px) {
-             .banner-image {
-                 height: 150px;
-             }
-             .schedule-image {
-                 height: 100px;
-             }
-         }
       </style>
    </head>
    <body>
@@ -96,6 +64,8 @@
                         <h1>Z1 Winterfest 2024</h1>
                      </div>
                      <img src="banner.png" alt="Banner Image" class="img-fluid">
+                     &nbsp
+                     <p style="color:#a63a50;"><strong>Instructions:</strong></p>
                      <ul class="bullet-points">
                         <li>Participation fee is <strong>Rs.600/- per flat.</strong></li>
                         <li>Fill a <strong>separate form for each participant</strong> from your flat.</li>
