--- a/index.html
+++ b/index.html
@@ -202,9 +202,10 @@
                   <!-- Food Stall Section -->
                   <section class="mb-4">
                      <div class="section-header">
-                        <h2>Food Stalls</h2>
+                        <h2>Book Food Stalls</h2>
+                        <p style="color:#a63a50;"><strong>NOTE:</strong> Booking is on first come first serve basis</p>
                      </div>
-                     <p>Select if you want to book a <strong>Food Stall at Rs. 700 per day per stall</strong> on competition days (booking is on first come first serve basis).</p>
+                     <p>Select if you want to book a <strong>Food Stall at Rs. 700 per day per stall</strong> on competition days.</p>
                      <!-- Static Checkbox list for dates -->
                      <div class="form-check">
                         <input class="form-check-input" type="checkbox" id="10nov" value="Sunday, 10 Nov">
@@ -258,7 +259,7 @@
                      <div class="form-check mb-3">
                         <input class="form-check-input" type="checkbox" id="acknowledge" required>
                         <label class="form-check-label" for="acknowledge">
-                        I have read and agree to the <a href="https://docs.google.com/document/d/1BE8XK-kl9kdpqbTX6sVo0VQXfe7bPPDbwTRa9D2aHww" target="_blank">competition rules</a>.
+                        I have read and agree to the <a href="https://docs.google.com/document/d/1BE8XK-kl9kdpqbTX6sVo0VQXfe7bPPDbwTRa9D2aHww" target="_blank">Z1 Winterfest 2024 rules</a>.
                         </label>
                      </div>
                   </section>
@@ -335,67 +336,67 @@
              updateCompetitionsDisplay('3to5yrs'); // Default age group on load
          });
          
-                 const competitionsData = [
-         {
-         category: 'Cultural',
-         competitions: [
-         { name: 'Dance-Bollywood', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
-         { name: 'Dance-Classical', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
-         { name: 'DJ Night', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false }, 
-         { name: 'Drawing', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs'], teamBased: false }, 
-         { name: 'Fancy Dress', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs'], teamBased: false },
-         { name: 'Karaoke Night', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
-         { name: 'Master Chef', ageGroups: ['11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
-         { name: 'Musical Instrument', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
-         { name: 'Rangoli', ageGroups: ['11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
-         { name: 'Singing-Bollywood', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
-         { name: 'Singing-Classical', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false }
-         ]
-         },
-         {
-         category: 'Games',
-         competitions: [
-         { name: 'Build an Object (Teams of 3)', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
-         { name: 'Jump In & Out', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
-         { name: 'Lemon & Spoon Race', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false }, 
-         { name: 'Musical Chairs', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false }, 
-         { name: 'Potato Picking Race', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
-         { name: 'Price is Right', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
-         { name: 'Sack Race', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
-         { name: 'Slow cycling', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
-         { name: 'Tambola', ageGroups: ['3to5yrs','6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
-         { name: 'Treasure Hunt (Teams of 4)', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
-         { name: 'Tug of War (Teams of 6)', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true }
-         ]
-         },
-         {
-         category: 'Quiz',
-         competitions: [
-         { name: 'Bollywood Quiz (Teams of 3)', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
-         { name: 'General Knowledge Quiz (Teams of 3)', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
-         { name: 'Spelling Bee', ageGroups: ['6to10yrs', '11to16yrs'], teamBased: false }
-         ]
-         },
-         {
-         category: 'Sports',
-         competitions: [
-         { name: '8 Ball Pool', ageGroups: ['17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
-         { name: 'Badminton (Singles)', ageGroups: ['6to10yrs', '11to16yrs'], teamBased: false },
-         { name: 'Badminton (Doubles)', ageGroups: ['17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
-         { name: 'Badminton (Mixed Doubles)', ageGroups: ['17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
-         { name: 'Table Tennis (Singles)', ageGroups: ['6to10yrs', '11to16yrs'], teamBased: false },
-         { name: 'Table Tennis (Doubles)', ageGroups: ['17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
-         { name: 'Table Tennis (Mixed Doubles)', ageGroups: ['17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
-         { name: 'Lawn Tennis (Singles)', ageGroups: ['6to10yrs', '11to16yrs'], teamBased: false },
-         { name: 'Lawn Tennis (Doubles)', ageGroups: ['17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
-         { name: 'Lawn Tennis (Mixed Doubles)', ageGroups: ['17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
-         { name: 'Cards-29 (Doubles)', ageGroups: ['17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true }, 
-         { name: 'Carrom (Doubles)', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true }, 
-         { name: 'Chess', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
-         { name: 'Kabaddi (Teams of 9)', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
-         { name: 'Swimming', ageGroups: ['3to5yrs','6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false }
-         ]
-         }
+         const competitionsData = [
+            {
+            category: 'Cultural',
+            competitions: [
+            { name: 'Dance-Bollywood', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
+            { name: 'Dance-Classical', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
+            { name: 'DJ Night', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false }, 
+            { name: 'Drawing', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs'], teamBased: false }, 
+            { name: 'Fancy Dress', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs'], teamBased: false },
+            { name: 'Karaoke Night', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
+            { name: 'Master Chef', ageGroups: ['11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
+            { name: 'Musical Instrument', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
+            { name: 'Rangoli', ageGroups: ['11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
+            { name: 'Singing-Bollywood', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
+            { name: 'Singing-Classical', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false }
+            ]
+            },
+            {
+            category: 'Games',
+            competitions: [
+            { name: 'Build an Object (Teams of 3)', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
+            { name: 'Jump In & Out', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
+            { name: 'Lemon & Spoon Race', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false }, 
+            { name: 'Musical Chairs', ageGroups: ['3to5yrs', '6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false }, 
+            { name: 'Potato Picking Race', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
+            { name: 'Price is Right', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
+            { name: 'Sack Race', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
+            { name: 'Slow cycling', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
+            { name: 'Tambola', ageGroups: ['3to5yrs','6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
+            { name: 'Treasure Hunt (Teams of 4)', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
+            { name: 'Tug of War (Teams of 6)', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true }
+            ]
+            },
+            {
+            category: 'Quiz',
+            competitions: [
+            { name: 'Bollywood Quiz (Teams of 3)', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
+            { name: 'General Knowledge Quiz (Teams of 3)', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
+            { name: 'Spelling Bee', ageGroups: ['6to10yrs', '11to16yrs'], teamBased: false }
+            ]
+            },
+            {
+            category: 'Sports',
+            competitions: [
+            { name: '8 Ball Pool', ageGroups: ['17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
+            { name: 'Badminton (Singles)', ageGroups: ['6to10yrs', '11to16yrs'], teamBased: false },
+            { name: 'Badminton (Doubles)', ageGroups: ['17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
+            { name: 'Badminton (Mixed Doubles)', ageGroups: ['17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
+            { name: 'Table Tennis (Singles)', ageGroups: ['6to10yrs', '11to16yrs'], teamBased: false },
+            { name: 'Table Tennis (Doubles)', ageGroups: ['17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
+            { name: 'Table Tennis (Mixed Doubles)', ageGroups: ['17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
+            { name: 'Lawn Tennis (Singles)', ageGroups: ['6to10yrs', '11to16yrs'], teamBased: false },
+            { name: 'Lawn Tennis (Doubles)', ageGroups: ['17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
+            { name: 'Lawn Tennis (Mixed Doubles)', ageGroups: ['17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
+            { name: 'Cards-29 (Doubles)', ageGroups: ['17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true }, 
+            { name: 'Carrom (Doubles)', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true }, 
+            { name: 'Chess', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false },
+            { name: 'Kabaddi (Teams of 9)', ageGroups: ['6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: true },
+            { name: 'Swimming', ageGroups: ['3to5yrs','6to10yrs', '11to16yrs','17to29yrs','30to35yrs','36to49yrs','50to55yrs','56Yrsabove'], teamBased: false }
+            ]
+            }
          ];
          
          function updateCompetitionsDisplay(selectedAgeGroup) {
