--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
                         <!-- Phone Number -->
                         <div class="mb-3">
                            <label for="phone" class="form-label" style="font-weight: bold;">Phone Number</label>
-                           <input type="tel" class="form-control" id="phone" placeholder="Enter your phone number" required pattern="^\+?(?:\d{1,3}[\s-]?)?(?:(\d[\s-]?){10})$" title="Enter valid phone number">
+                           <input type="tel" class="form-control" id="phoneNumber" name="phoneNumber"
+                                  pattern="^\+?(\d{1,4}[\s-]?)?(\(?\d{1,3}\)?[\s-]?)?[\d\s-]{4,10}$"
+                                  title="Enter a valid phone number. Include country and area code if necessary."
+                                  placeholder="Enter phone number" required>
                         </div>
                         <!-- Tower -->
                         <div class="mb-3">
