--- a/index.html
+++ b/index.html
@@ -84,18 +84,18 @@
                   <section class="mb-4">
                      <div class="section-header">
                         <h2>Participant Information</h2>
-                        <p style="color:#a63a50;"><strong>NOTE:</strong> Fill a separate form for each participant</p>
+                        <p style="color:#a63a50;"><strong>NOTE:</strong> Fill a separate form for each participant from your flat</p>
                      </div>
                      <form id="registrationForm">
                         <!-- Email -->
                         <div class="mb-3">
                            <label for="email" class="form-label" style="font-weight: bold;">Email</label>
-                           <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+                           <input type="email" class="form-control" id="email" placeholder="Enter email" required>
                         </div>
                         <!-- Name -->
                         <div class="mb-3">
                            <label for="name" class="form-label" style="font-weight: bold;">Name</label>
-                           <input type="text" class="form-control" id="name" placeholder="Enter your full name" required>
+                           <input type="text" class="form-control" id="name" placeholder="Enter full name" required>
                         </div>
                         <!-- Phone Number -->
                         <div class="mb-3">
@@ -130,7 +130,7 @@
                         <!-- Flat Number -->
                         <div class="mb-3">
                            <label for="flat" class="form-label" style="font-weight: bold;">Flat Number</label>
-                           <input type="number" class="form-control" id="flat" placeholder="Enter your flat number" required>
+                           <input type="number" class="form-control" id="flat" placeholder="Enter flat number" required>
                         </div>
                         <!-- Gender -->
                         <div class="mb-3">
@@ -151,11 +151,11 @@
                         <!-- Age -->
                         <div class="mb-3">
                            <label for="age" class="form-label" style="font-weight: bold;">Age</label>
-                           <input type="number" class="form-control" id="age" placeholder="Enter your age in number" required>
+                           <input type="number" class="form-control" id="age" placeholder="Enter age" required>
                         </div>
                         <!-- Age Group -->
                         <div class="mb-3">
-                           <label style="font-weight: bold;">Age Group</label>
+                           <label style="font-weight: bold;">Select correct Age Group</label>
                            <div class="form-check">
                               <input class="form-check-input" type="radio" name="ageGroup" id="3to5yrs" value="3to5yrs" onchange="updateCompetitionsDisplay(this.value)" required>
                               <label class="form-check-label" for="3to5yrs">3 to 5 yrs</label>
