--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                  var gender = document.getElementById('gender').value;
                  var age = document.getElementById('age').value;
                  var ageGroup = document.getElementById('ageGroup').value;
-                 var competitions = "xyz";
+                 var optedCompetitions = "xyz";
                  var foodStalls = "xyz";
                  var acknowledge = document.getElementById('acknowledge').value;
                  var paymentOption = document.getElementById('paymentOption').value;
@@ -372,7 +372,7 @@
                  formData.append('gender', gender);
                  formData.append('age', age);
                  formData.append('ageGroup', ageGroup);
-                 formData.append('competitions', competitions);
+                 formData.append('competitions', optedCompetitions);
                  formData.append('foodStalls', foodStalls);
                  formData.append('acknowledge', acknowledge);
                  formData.append('paymentOption', paymentOption);
