--- a/index.html
+++ b/index.html
@@ -345,13 +345,13 @@
                  var phoneNumber = document.getElementById('phoneNumber').value;
                  var tower = document.getElementById('tower').value;
                  var flat = document.getElementById('flat').value;
-                 var gender = document.getElementById('gender').value;
+                 var gender = document.querySelector('input[name="gender"]:checked');
                  var age = document.getElementById('age').value;
-                 var ageGroup = document.getElementById('ageGroup').value;
+                 var ageGroup = document.querySelector('input[name="ageGroup"]:checked');
                  var competitions = "xyz";
                  var foodStalls = "xyz";
                  var acknowledge = document.getElementById('acknowledge').value;
-                 var paymentOption = document.getElementById('paymentOption').value;
+                 var paymentOption = document.querySelector('input[name="paymentOption"]:checked');
                  var paymentScreenshotLink = "xyz";
                
                  if (!email || !name || !phoneNumber || !tower || !flat || !gender || !age || !ageGroup || !acknowledge || !paymentOption) {  // Basic validation
@@ -369,13 +369,13 @@
                  formData.append('phoneNumber', phoneNumber);
                  formData.append('tower', tower);
                  formData.append('flat', flat);
-                 formData.append('gender', gender);
+                 formData.append('gender', gender.value);
                  formData.append('age', age);
-                 formData.append('ageGroup', ageGroup);
+                 formData.append('ageGroup', ageGroup.value);
                  formData.append('competitions', competitions);
                  formData.append('foodStalls', foodStalls);
                  formData.append('acknowledge', acknowledge);
-                 formData.append('paymentOption', paymentOption);
+                 formData.append('paymentOption', paymentOption.value);
                  formData.append('paymentScreenshotLink', paymentScreenshotLink);
                
                  // Step 4: Send data using fetch to Google Apps Script Web App URL
