--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@
                   // Step 4: Send data using fetch with JSON payload
                   fetch('https://script.google.com/macros/s/AKfycbyI4UxKFPv4yB_ztRqhwa8I-caBjijfKrnt-gGNTx0Zfo7qx9KxKTnscAOgHWvzFrbspA/exec', {
                       redirect: "follow",
+                      mode: 'no-cors'
                       method: 'POST',
                       headers: {
                           'Content-Type': 'text/plain;charset=utf-8'
