--- a/index.html
+++ b/index.html
@@ -355,10 +355,12 @@
                  var age = document.getElementById('age').value;
                  var ageGroup = document.querySelector('input[name="ageGroup"]:checked');
 
-                 if (!email || !name || !phoneNumber || !tower || !flat || !gender || !age || !ageGroup || !acknowledge || !paymentOption) {  // Basic validation
-                   alert("All fields are required!");
-                   return;
-                 }
+                //console.log("email:" + email);
+
+                 //if (!email || !name || !phoneNumber || !tower || !flat || !gender || !age || !ageGroup || !acknowledge || !paymentOption) {  // Basic validation
+                 //  alert("All fields are required!");
+                 //  return;
+                 //}
                
                  // Step 2: Set the data
                 let competitionInfo = [];
