added general rules

--- a/index.html
+++ b/index.html
@@ -253,6 +253,36 @@
                      <div class="section-header">
                         <h2>Acknowledge Rules</h2>
                      </div>
+                     <div>
+                        <strong>Eligibility</strong>
+                        <p>
+                        1. Participants must be residents or owners in Z1.
+                        2. Participants can only play in their own age category as specified for that event.
+                        3. Age validation - If required, organizers will request for age proof of participants and then assign them to the appropriate age category.
+                        </p>
+                        &nbsp
+                        <strong>General Rules</strong>
+                        <p>
+                        1. All participation forms must be received by Sunday, 27 October 2024.
+                        2. Participants must arrive on time as per schedule.
+                        3. Participants from the senior most age category can choose to drop down to the next age category.
+                        4. If an event doesn't have a minimum of 4 individual/ team participation, it will be canceled.
+                        5. No changes to teams will be allowed after 27 Oct, 2024.
+                        6. All events require a lot of planning and fixtures will be decided in advance. Therefore, organizers will not be able to accommodate entries after the participation due date.
+                        7. We have created the competition schedule keeping multiple variables in mind and therefore, it will not be possible to reschedule any of the events.
+                        8. Each contest will have a Winner and a Runners-up.
+                        9. The decision of Referee/ Umpire/ Linesman/ Judge will be final.
+                        </p>
+                        &nbsp
+                        <strong>Racket games</strong>
+                        <p>
+                        1. Seeded players are not allowed to compete. 
+                        2. For Doubles and Mixed Doubles Racket games, it is mandatory to mention team member names and flat numbers.
+                        3. To accommodate all participants, racket games might be held on weekdays. The schedule will be published at least one week in advance.
+                        </p>
+                        &nbsp
+                     </div>
+                     &nbsp
                      <div class="form-check mb-3">
                         <input class="form-check-input" type="checkbox" id="acknowledge" required>
                         <label class="form-check-label" for="acknowledge">
