--- a/index.html
+++ b/index.html
@@ -315,7 +315,14 @@
                      &nbsp
                      <div class="mb-3">
                         <p style="color:#a63a50;"><strong>(Preferred method) Pay via Anacity:</strong></p>
-                        <p> Go to the app => "Z1 Apartments Facilities" account on the top left => Dues => Pay advance => Paying to "Winterfest 2024" => Choose amount Rs. 600/ 700/ both => Pay</p>
+                        <p> Go to the app 
+                            => "Z1 Apartments Facilities" account on the top left 
+                            => Dues 
+                            => Pay advance 
+                            => Paying to "Winterfest 2024" 
+                            => Choose amount Rs. 600/ 700/ both 
+                            => Pay
+                        </p>
                         <p style="color:#a63a50;">
                            <strong>(Alternate method) Pay via UPI:</strong>
                         </p>
