--- a/index.html
+++ b/index.html
@@ -255,34 +255,33 @@
                      </div>
                      <div>
                         <strong>Eligibility</strong>
-                        <p>
-                        1. Participants must be residents or owners in Z1.
-                        2. Participants can only play in their own age category as specified for that event.
-                        3. Age validation - If required, organizers will request for age proof of participants and then assign them to the appropriate age category.
-                        </p>
+                        <ul class="bullet-points">
+                           <li>Participants must be residents or owners in Z1.</li>
+                           <li>Participants can only play in their own age category as specified for that event.</li>
+                           <li>Age validation - If required, organizers will request for age proof of participants and then assign them to the appropriate age category.</li>
+                        </ul>
                         &nbsp
                         <strong>General Rules</strong>
-                        <p>
-                        1. All participation forms must be received by Sunday, 27 October 2024.
-                        2. Participants must arrive on time as per schedule.
-                        3. Participants from the senior most age category can choose to drop down to the next age category.
-                        4. If an event doesn't have a minimum of 4 individual/ team participation, it will be canceled.
-                        5. No changes to teams will be allowed after 27 Oct, 2024.
-                        6. All events require a lot of planning and fixtures will be decided in advance. Therefore, organizers will not be able to accommodate entries after the participation due date.
-                        7. We have created the competition schedule keeping multiple variables in mind and therefore, it will not be possible to reschedule any of the events.
-                        8. Each contest will have a Winner and a Runners-up.
-                        9. The decision of Referee/ Umpire/ Linesman/ Judge will be final.
-                        </p>
+                        <ul class="bullet-points">
+                           <li>All participation forms must be received by Sunday, 27 October 2024.</li>
+                           <li>Participants must arrive on time as per schedule.</li>
+                           <li>Participants from the senior most age category can choose to drop down to the next age category.</li>
+                           <li>If an event doesn't have a minimum of 4 individual/ team participation, it will be canceled.</li>
+                           <li>No changes to teams will be allowed after 27 Oct, 2024.</li>
+                           <li>All events require a lot of planning and fixtures will be decided in advance. Therefore, organizers will not be able to accommodate entries after the participation due date.</li>
+                           <li>We have created the competition schedule keeping multiple variables in mind and therefore, it will not be possible to reschedule any of the events.</li>
+                           <li>Each contest will have a Winner and a Runners-up.</li>
+                           <li>The decision of Referee/ Umpire/ Linesman/ Judge will be final.</li>
+                        </ul>
                         &nbsp
                         <strong>Racket games</strong>
-                        <p>
-                        1. Seeded players are not allowed to compete. 
-                        2. For Doubles and Mixed Doubles Racket games, it is mandatory to mention team member names and flat numbers.
-                        3. To accommodate all participants, racket games might be held on weekdays. The schedule will be published at least one week in advance.
-                        </p>
+                        <ul class="bullet-points">
+                           <li>Seeded players are not allowed to compete. </li>
+                           <li>For Doubles and Mixed Doubles Racket games, it is mandatory to mention team member names and flat numbers.</li>
+                           <li>To accommodate all participants, racket games might be held on weekdays. The schedule will be published at least one week in advance.</li>
+                        </ul>
                         &nbsp
                      </div>
-                     &nbsp
                      <div class="form-check mb-3">
                         <input class="form-check-input" type="checkbox" id="acknowledge" required>
                         <label class="form-check-label" for="acknowledge">
@@ -315,14 +314,11 @@
                      &nbsp
                      <div class="mb-3">
                         <p style="color:#a63a50;"><strong>(Preferred method) Pay via Anacity:</strong></p>
-                        <p> Go to the app 
-                            => "Z1 Apartments Facilities" account on the top left 
-                            => Dues 
-                            => Pay advance 
-                            => Paying to "Winterfest 2024" 
-                            => Choose amount Rs. 600/ 700/ both 
-                            => Pay
-                        </p>
+                        <ul class="bullet-points">
+                           <li>Go to the app => "Z1 Apartments Facilities" account on the top left</li>
+                           <li>Select Dues => Pay advance => Paying to "Winterfest 2024"</li>
+                           <li>Choose amount Rs. 600/ 700/ both and proceed with payment</li>
+                        </ul>
                         <p style="color:#a63a50;">
                            <strong>(Alternate method) Pay via UPI:</strong>
                         </p>
