--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
                         </ul>
                         &nbsp
                      </div>
+                     <strong>Other competition specific rules</strong>
                      <div class="form-check mb-3">
                         <input class="form-check-input" type="checkbox" id="acknowledge" required>
                         <label class="form-check-label" for="acknowledge">
