--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
                         &nbsp
                         <li>If you are submitting another form for another participant from your flat to participate in competitions, and have <strong>already made a payment of Rs.600 for your flat</strong>, select Option 2, skip the payment, and attach original payment screenshot.</li>
                      </ul>
+                     <div class="divider"></div>
                      <div class="form-check">
                         <input class="form-check-input" type="radio" name="paymentOption" id="option1" value="Option 1 : I confirm that I will pay Rs.600 for competitions and/or Rs. 700 for food stall now.">
                         <label class="form-check-label" for="option1"><strong>Option 1</strong> : I confirm that I will pay Rs.600 for competitions and/or Rs. 700 for food stall now.</label>
