--- a/index.html
+++ b/index.html
@@ -356,27 +356,28 @@
                             <div class="section-header">
                                 <h2>Payment</h2>
                             </div>
-                            <p>Please check the appropriate box! &nbsp</p>
-                            &nbsp
-                            <p>If this is the <strong>first registration from your flat</strong> OR if you are registering <strong>again to host a Food stall</strong>, select Option 1, make the payment, and attach payment screenshot.</p>
+                            <p>Please check the appropriate option! &nbsp</p>
+                            <strong>Option 1 :</strong>
+                            <p>If this is the <strong>first registration from your flat</strong> OR if you are registering <strong>again to host a Food stall</strong>, select this option, make the payment and attach payment screenshot.</p>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="paymentOption" id="option1" value="Option 1 : I confirm that I will pay Rs.600 for competitions and/or Rs. 700 for food stall now." />
-                                <label class="form-check-label" for="option1"><strong>Option 1</strong> : I confirm that I will pay Rs.600 for competitions and/or Rs. 700 for food stall now.</label>
+                                <input class="form-check-input" type="radio" name="paymentOption" id="option1" value="I will pay for my flat now." />
+                                <label class="form-check-label" for="option1"><strong>Option 1</strong> : I will pay for my flat now.</label>
                             </div>
                             &nbsp
+                            <strong>Option 2 :</strong>
                             <p>
-                                If you are submitting another form for another participant from your flat to participate in competitions, and have <strong>already made a payment of Rs.600 for your flat</strong>, select Option 2, skip the
-                                payment, and attach original payment screenshot.
+                                If you are submitting another form for another participant from your flat to participate in competitions, and have <strong>already made a payment of Rs.600 for your flat</strong>, select this option, skip the
+                                payment and re-attach original payment screenshot.
                             </p>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="paymentOption" id="option2" value="Option 2 : I confirm that I have already made a payment of Rs. 600 and will attach the the screenshot." />
-                                <label class="form-check-label" for="option2"><strong>Option 2</strong> : I confirm that I have already made a payment of Rs. 600 and will attach the the screenshot.</label>
+                                <input class="form-check-input" type="radio" name="paymentOption" id="option2" value="I have already made a payment for my flat." />
+                                <label class="form-check-label" for="option2"><strong>Option 2</strong> : I have already made a payment for my flat.</label>
                             </div>
                             &nbsp
                             <div class="mb-3">
                                 <p style="color: #a63a50;"><strong>(Preferred method) Pay via Anacity:</strong></p>
                                 <ul class="bullet-points">
-                                    <li>Go to the app => "Z1 Apartments Facilities" account on the top left</li>
+                                    <li>Go to "Z1 Apartments Facilities" account on the top left</li>
                                     <li>Select Dues => Pay advance => Paying to "Winterfest 2024"</li>
                                     <li>Choose amount Rs. 600/ 700/ both and proceed with payment</li>
                                 </ul>
