--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                             <p>If this is the <strong>first registration from your flat</strong> OR if you are registering <strong>again to host a Food stall</strong>, select this option, make the payment and attach payment screenshot.</p>
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="paymentOption" id="option1" value="I will pay for my flat now." />
-                                <label class="form-check-label" for="option1"><strong>Option 1</strong> : I will pay for my flat now.</label>
+                                <label class="form-check-label" for="option1">I will pay for my flat now.</label>
                             </div>
                             &nbsp
                             <strong>Option 2 :</strong>
@@ -371,7 +371,7 @@
                             </p>
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="paymentOption" id="option2" value="I have already made a payment for my flat." />
-                                <label class="form-check-label" for="option2"><strong>Option 2</strong> : I have already made a payment for my flat.</label>
+                                <label class="form-check-label" for="option2">I have already made a payment for my flat.</label>
                             </div>
                             &nbsp
                             <div class="mb-3">
