--- a/index.html
+++ b/index.html
@@ -358,16 +358,17 @@
                             </div>
                             <p>Please check the appropriate option! &nbsp</p>
                             <strong>Option 1 :</strong>
-                            <p>If this is the <strong>first registration from your flat</strong> OR if you are registering <strong>again to host a Food stall</strong>, select this option, make the payment and attach payment screenshot.</p>
+                            <p>If this is the <strong>first registration from your flat</strong> OR if you are registering <strong>again to host a Food stall</strong>, select this option, 
+                                make the payment and attach payment screenshot.</p>
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="paymentOption" id="option1" value="I will pay for my flat now." />
                                 <label class="form-check-label" for="option1">I will pay for my flat now.</label>
                             </div>
-                            &nbsp
+                            <div class="divider"></div>
                             <strong>Option 2 :</strong>
                             <p>
-                                If you are submitting another form for another participant from your flat to participate in competitions, and have <strong>already made a payment of Rs.600 for your flat</strong>, select this option, skip the
-                                payment and re-attach original payment screenshot.
+                                If you are submitting another form for another participant from your flat to participate in competitions, and have <strong>already made a payment of Rs.600 
+                                for your flat</strong>, select this option, skip the payment and re-attach original payment screenshot.
                             </p>
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="paymentOption" id="option2" value="I have already made a payment for my flat." />
