--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
                 background-color: #dee2e6;
                 margin: 40px 0;
             }
+            .dividerthin {
+                height: 1px;
+                background-color: #dee2e6;
+                margin: 20px 0;
+            }
             .category-block {
                 display: none;
                 margin-bottom: 20px;
@@ -364,7 +369,7 @@
                                 <input class="form-check-input" type="radio" name="paymentOption" id="option1" value="I will pay for my flat now." />
                                 <label class="form-check-label" for="option1">I will pay for my flat now.</label>
                             </div>
-                            <div class="divider"></div>
+                            <div class="dividerthin"></div>
                             <strong>Option 2 :</strong>
                             <p>
                                 If you are submitting another form for another participant from your flat to participate in competitions, and have <strong>already made a payment of Rs.600 
