--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             .dividerthin {
                 height: 1px;
                 background-color: #dee2e6;
-                margin: 20px 0;
+                margin: 10px 0;
             }
             .category-block {
                 display: none;
@@ -379,7 +379,7 @@
                                 <input class="form-check-input" type="radio" name="paymentOption" id="option2" value="I have already made a payment for my flat." />
                                 <label class="form-check-label" for="option2">I have already made a payment for my flat.</label>
                             </div>
-                            &nbsp
+                            <div class="dividerthin"></div>
                             <div class="mb-3">
                                 <p style="color: #a63a50;"><strong>(Preferred method) Pay via Anacity:</strong></p>
                                 <ul class="bullet-points">
