--- a/index.html
+++ b/index.html
@@ -6,88 +6,19 @@
         <title>Z1 Winterfest 2024</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
         <style>
-            /* Styling the entire nav-tabs container */
-            .nav-tabs {
-                border-bottom: 3px solid #4caf50; /* Solid border under the tabs */
-            }
-            /* Defining the default look of each tab */
-            .nav-link {
-                color: #666;
-                padding: 10px 20px;
-                background-color: #f9f9f9;
-                border: 0 solid transparent;
-                border-radius: 5px 5px 0 0;
-                transition: color 0.2s, background-color 0.2s; /* Smooth transition for hover effects */
-            }
-            /* Darker background and color text when hovering over tab */
-            .nav-link:hover {
-                background-color: #e2e2e2;
-                color: #333;
-                border-color: #ddd; /* Slightly darker border on hover */
-            }
-            /* Styling for when a tab is active */
-            .nav-tabs .nav-link.active,
-            .nav-tabs .nav-link.active:hover {
-                color: #fff;
-                background-color: #4caf50;
-                border: 0;
-                border-bottom-color: transparent; /* No border at the bottom */
-            }
-            /* Responsive adjustments for tablets */
-            @media (max-width: 768px) {
-                .nav-link {
-                    padding: 8px 16px;
-                    font-size: 14px; /* Slightly reduce padding and font size */
-                }
-            }
-            /* Responsive adjustments for small devices (phones) */
-            @media (max-width: 575.98px) {
-                .nav-tabs {
-                    overflow-x: auto;
-                    flex-wrap: nowrap; /* Enable horizontal scrolling and prevent tabs from wrapping */
-                }
-                .nav-link {
-                    padding: 6px 12px;
-                    font-size: 12px; /* Further reduce padding and font size */
-                }
-            }
-            .section-header {
-                background-color: #e6d4e7;
-                padding: 10px;
-                border-radius: 5px;
-                margin-bottom: 20px;
-            }
-            .divider {
-                height: 2px;
-                background-color: #dee2e6;
-                margin: 40px 0;
-            }
-            .dividerthin {
-                height: 1px;
-                background-color: #dee2e6;
-                margin: 10px 0;
-            }
-            .category-block {
-                display: none;
-                margin-bottom: 20px;
-            }
-            .category-header {
-                font-size: 20px;
-                font-weight: bold;
-                color: #333;
-            }
-            .bullet-points {
-                list-style: none;
-                padding-left: 20px;
-            }
-            .bullet-points li:before {
-                content: "\2022";
-                color: black;
-                font-weight: bold;
-                display: inline-block;
-                width: 1em;
-                margin-left: -1em;
-            }
+            .nav-tabs { border-bottom: 3px solid #4caf50; }
+            .nav-link { color: #666; padding: 10px 20px; background-color: #f9f9f9; border: 0 solid transparent; border-radius: 5px 5px 0 0; transition: color 0.2s, background-color 0.2s; }
+            .nav-link:hover { background-color: #e2e2e2; color: #333; border-color: #ddd; }
+            .nav-tabs .nav-link.active, .nav-tabs .nav-link.active:hover { color: #fff; background-color: #4caf50; border: 0; border-bottom-color: transparent; }
+            @media (max-width: 768px) { .nav-link { padding: 8px 16px; font-size: 14px; } }
+            @media (max-width: 575.98px) { .nav-tabs { overflow-x: auto; flex-wrap: nowrap; } .nav-link { padding: 6px 12px; font-size: 12px; } }
+            .section-header { background-color: #e6d4e7; padding: 10px; border-radius: 5px; margin-bottom: 20px; }
+            .divider { height: 2px; background-color: #dee2e6; margin: 40px 0; }
+            .dividerthin { height: 1px; background-color: #dee2e6; margin: 10px 0; }
+            .category-block { display: none; margin-bottom: 20px; }
+            .category-header { font-size: 20px; font-weight: bold; color: #333; }
+            .bullet-points { list-style: none; padding-left: 20px; }
+            .bullet-points li:before { content: "\2022"; color: black; font-weight: bold; display: inline-block; width: 1em; margin-left: -1em; }
         </style>
     </head>
     <body>
